# GUI-TestTask

./: README.md  base.py  main.py  managers.py  pyproject.toml  todo_app.py
